--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     
+    <section id="root"></section>
+
+
+    <script type="module" src="./app/index.js"></script>
 </body>
 </html>
