--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <section id="root"></section>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="./app/index.js"></script>
 </body>
 </html>
